<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_register"
        android:orderInCategory="100"
        android:title="@string/register"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_status_enquiry"
        android:orderInCategory="100"
        android:title="@string/status_enquiry"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_payment"
        android:orderInCategory="100"
        android:title="@string/payment"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cancellation"
        android:orderInCategory="100"
        android:title="@string/cancellation"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reconciliation"
        android:orderInCategory="100"
        android:title="@string/reconciliation"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_diagnosis"
        android:orderInCategory="100"
        android:title="@string/diagnosis"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_custom_command"
        android:orderInCategory="100"
        android:title="@string/custom_command"
        app:showAsAction="never" />

    <!--
    <item
        android:id="@+id/action_connect_terminal"
        android:orderInCategory="100"
        android:title="@string/connect"
        app:showAsAction="never" />
    -->
</menu>
